# dove

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  dove.yaml
.github/workflows/: pages.yml  rust.yml
src/: build.rs  cli.rs  commands.rs  config.rs  icons.rs  init.rs  main.rs  preview.rs  utils.rs
src/assets/: sample.dove.yaml
themes/default/assets/: app.js  offline.html  styles.css  sw.js
themes/default/templates/: detail.html.tera  index.html.tera
