[package]
name = "dove"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tiny static nav site generator for Cloudflare Pages"
repository = ""

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
url = "2"
tera = "1"
include_dir = "0.7"
tiny_http = "0.12"
notify = "6"
webbrowser = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
remote = ["dep:ureq", "dep:serde_json"]

[dependencies.ureq]
version = "2"
features = ["json", "tls"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
